--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bella Olonge</title>
+    <link rel="stylesheet" href="./main.css">
+    <link rel="icon" href="./images/logo.png">
+</head>
+<body>
+    <menu>
+        <div class="menu-logo">
+            <img src="./images/logo.png" alt="">
+        </div>
+        <div class="menu-links">
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">product</a></li>
+                <li><a href="#">faq</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </div>
+    </menu>
+    <header>
+    </header>
+</body>
+</html>
