--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
         </div>
     </menu>
     <header>
+        <div class="wrapper">
+            <p class="name">
+                Food app
+            </p>
+            <h1>Why stay hungry when you can order form Bella Onojie</h1>
+            <p>Download the bella onoje's food app now on</p>
+            <button class="btn-playstore">Playstore</button>
+            <button class="btn-appstore">App store</button>
+        </div>
     </header>
+
+    <script src="./main.js"></script>
 </body>
 </html>
