--- a/index.html
+++ b/index.html
@@ -31,7 +31,16 @@
             <button class="btn-playstore">Playstore</button>
             <button class="btn-appstore">App store</button>
         </div>
+        <div class="phones">
+            <img src="./images/phone1.png" alt="">
+            <img src="./images/phone2.png" alt="">
+        </div>
     </header>
+
+    <section-2>
+        <span class="border"></span>
+        <h1>How the app works</h1>
+    </section-2>
 
     <script src="./main.js"></script>
 </body>
