--- a/index.html
+++ b/index.html
@@ -37,10 +37,44 @@
         </div>
     </header>
 
-    <section-2>
-        <span class="border"></span>
+    <section class="process">
+        <div class="border"></div>
         <h1>How the app works</h1>
-    </section-2>
+        <div class="wrapper">
+            <div class="first-step">
+                <img src="./images/login.png" alt="">
+                <div>
+                    <p class="name">Create an account</p>
+                    <h1>Create/login to an existing account to get started</h1>
+                    <p>An account is created with your email and a desire password</p>
+                </div>
+            </div>
+            <div class="second-step">
+                <div>
+                    <p class="name">Explore varietes</p>
+                    <h1>Shop for your favorites meal as e dey hot</h1>
+                    <p>Shop for your favorite meals or drinks and enjoy while doing it</p>
+                </div>
+                <img src="./images/foods.png" alt="">
+            </div>
+            <div class="third-step">
+                <img src="./images/payment.png" alt="">
+                <div>
+                    <p class="name">Checkout</p>
+                    <h1>When you done check out and get it delivered</h1>
+                    <p>When you done check out and get it delivered with ease</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="getting-app">
+        <h1>Download the app now</h1>
+        <p>Avaliable on your favourite store. Start your premium experience now</p>
+        <div>
+            <button class="btn-playstore">Playstore</button>
+            <button class="btn-appstore">App store</button>
+        </div>
+    </section>
 
     <script src="./main.js"></script>
 </body>
